feat(AppointmentSessions) fixed appointment session and consultation workflow